--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,32 @@ ul {
   margin-right: 50px;
 }
 
+.site-nav-item {
+  position: relative;
+}
+
+.site-nav-item::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  content: "";
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent);
+  border-radius: 2px;
+
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav-item:hover::after,
+.site-nav-item:focus::after {
+  transform: scaleX(1);
+}
+
 .logo {
   color: var(--accent);
   font-family: Raleway, sans-serif;
@@ -82,15 +108,32 @@ ul {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link.active {
   color: var(--accent);
 }
 
+.link.active::after {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  content: "";
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent);
+  border-radius: 2px;
+}
+
 .link:hover,
 .link:focus {
   color: var(--accent);
+  /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .header-address {
@@ -119,12 +162,15 @@ ul {
   align-items: center;
   gap: 10px;
   fill: var(--secondary-text-color);
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-link:hover,
 .header-address-link:focus {
   color: var(--accent);
   fill: var(--accent);
+  /* transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .hero {
@@ -134,6 +180,10 @@ ul {
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+
+  max-width: 1600px;
 
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -310,12 +360,15 @@ ul {
   height: 44px;
 
   fill: var(--icon-colour);
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
 .social-link:focus {
   fill: #ffffff;
   background: var(--accent);
+  /* transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .clients-title {
@@ -344,6 +397,8 @@ ul {
   border: 1px solid var(--icon-colour);
   border-radius: 4px;
   fill: var(--icon-colour);
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -388,6 +443,8 @@ ul {
   line-height: 1.7;
   letter-spacing: 0.03em;
   text-decoration: none;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address-contacts {
@@ -397,6 +454,8 @@ ul {
   line-height: 1.7;
   letter-spacing: 0.03em;
   text-decoration: none;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address-office:hover,
@@ -437,6 +496,8 @@ ul {
   color: var(--primary-bgheader-color);
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
@@ -483,12 +544,52 @@ ul {
   border-radius: 4px;
   padding: 6px 22px;
   border: none;
+
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-link-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 63px 24px;
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  opacity: 0;
+}
+
+.overlay-text {
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: #fff;
+}
+
+.portfolio-item:hover .overlay {
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .filter-button:hover,
 .filter-button:focus {
   background-color: var(--accent);
   color: var(--hero-text);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .portfolio-link:hover,
@@ -551,4 +652,55 @@ img {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: visibility 250ms, opacity 250ms;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width: 528px;
+  height: 581px;
+
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.modal-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
 }
