--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,11 @@ ul {
   gap: 10px;
   fill: var(--secondary-text-color);
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon {
+  fill: currentColor;
 }
 
 .header-address-link:hover,
@@ -290,6 +294,30 @@ ul {
   margin-bottom: 50px;
 }
 
+.thumb {
+  position: relative;
+}
+
+.projects-thumb {
+  position: absolute;
+  bottom: 0;
+  width: 370px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(47, 48, 58, 0.8);
+}
+
+.projects-thumb-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--hero-text);
+}
+
 .team-list {
   display: flex;
 }
@@ -361,7 +389,8 @@ ul {
 
   fill: var(--icon-colour);
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -398,7 +427,7 @@ ul {
   border-radius: 4px;
   fill: var(--icon-colour);
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -545,7 +574,9 @@ ul {
   padding: 6px 22px;
   border: none;
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link-thumb {
@@ -570,7 +601,7 @@ ul {
 
   background-color: rgba(33, 150, 243, 0.9);
 
-  opacity: 0;
+  /* opacity: 0; */
 }
 
 .overlay-text {
@@ -580,9 +611,10 @@ ul {
   color: #fff;
 }
 
-.portfolio-item:hover .overlay {
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay {
   transform: translateY(0);
-  opacity: 1;
+  /* opacity: 1; */
 }
 
 .filter-button:hover,
